...
                Expanded(
                  child: Column(
                    crossAxisAlignment: CrossAxisAlignment.start,
                    children: [
                      Text(
                        state.model.fullname,
                        key: const Key("textProfileFullName"),
                        style: Theme.of(context).textTheme.subtitle1?.copyWith(
                          color: Theme.of(context).colorScheme.onBackground,
                          fontWeight: FontWeight.w500
                        ),
                      ),
                      Text(
                        state.model.email,
                        key: const Key("textProfileEmail"),
                        style: Theme.of(context).textTheme.bodyText1?.copyWith(
                          color: Theme.of(context).colorScheme.onBackground.withOpacity(0.5)
                        ),
                      )
                    ],
                  )
                )
              ],
            ),
            const SizedBox(height: 32),
            Text(
              "Personal Information",
              key: const Key("labelPersonalInformation"),
              style: Theme.of(context).textTheme.subtitle1?.copyWith(
                color: Theme.of(context).colorScheme.onBackground
              ),
            ),
            const SizedBox(height: 24),
            Text(
              "Full name",
              key: const Key("labelFullName"),
              style: Theme.of(context).textTheme.bodyText1?.copyWith(
                color: Theme.of(context).colorScheme.onBackground.withOpacity(0.5)
              ),
            ),
            const SizedBox(height: 8),
            Text(
              state.model.fullname,
              key: const Key("textFullName"),
              style: Theme.of(context).textTheme.subtitle1?.copyWith(
                color: Theme.of(context).colorScheme.onBackground,
                fontWeight: FontWeight.w400
              ),
            ),
            const SizedBox(height: 16),
            Text(
              "Email Address",
              key: const Key("labelEmailAddress"),
              style: Theme.of(context).textTheme.bodyText1?.copyWith(
                color: Theme.of(context).colorScheme.onBackground.withOpacity(0.5)
              ),
            ),
            const SizedBox(height: 8),
            Text(
              state.model.email,
              key: const Key("textEmailAddress"),
              style: Theme.of(context).textTheme.subtitle1?.copyWith(
                color: Theme.of(context).colorScheme.onBackground,
                fontWeight: FontWeight.w400
              ),
            ),
            const SizedBox(height: 16),
            Text(
              "Date of Birth",
              key: const Key("labelDOB"),
              style: Theme.of(context).textTheme.bodyText1?.copyWith(
                color: Theme.of(context).colorScheme.onBackground.withOpacity(0.5)
              ),
            ),
            const SizedBox(height: 8),
            Text(
              state.model.formattedDob,
              key: const Key("textDOB"),
              style: Theme.of(context).textTheme.subtitle1?.copyWith(
                color: Theme.of(context).colorScheme.onBackground,
                fontWeight: FontWeight.w400
              ),
            ),
            const SizedBox(height: 16),
            Text(
              "Address",
              key: const Key("labelAddress"),
              style: Theme.of(context).textTheme.bodyText1?.copyWith(
                color: Theme.of(context).colorScheme.onBackground.withOpacity(0.5)
              ),
            ),
            const SizedBox(height: 8),
            Text(
              state.model.address,
              key: const Key("textAddress"),
              style: Theme.of(context).textTheme.subtitle1?.copyWith(
                color: Theme.of(context).colorScheme.onBackground,
                fontWeight: FontWeight.w400
              ),
            ),
          ],
...
