...
          ),
        ),
        const SizedBox(height: 32),
        Center(
          child: Text(
            "Welcome back!",
            key: const Key("textWelcomeBack"),
            style: Theme.of(context).textTheme.headline1?.copyWith(
              color: Theme.of(context).colorScheme.onBackground
            ),
          ),
        ),
        const SizedBox(height: 48),
        BorderedTextField(
          key: const Key("usernameField"),
          hintText: "Full Name", 
          onChanged: (value) {
            context.read<LoginBloc>().add(LoginSetUsername(username: value));
          }
        ),
        const SizedBox(height: 16),
        BorderedTextField(
          key: const Key("passwordField"),
          hintText: "Password",
          obscureText: true,
          onChanged: (value) {
            context.read<LoginBloc>().add(LoginSetPassword(password: value));
          }
        ),
        const SizedBox(height: 32),
        Row(
          children: [
            Expanded(
              child: ElevatedButton(
                key: const Key("submitButton"),
                style: ElevatedButton.styleFrom(
                  elevation: 0,
                  minimumSize: Size.zero,
                  padding: const EdgeInsets.all(16),
                  tapTargetSize: MaterialTapTargetSize.shrinkWrap,
                  shape: RoundedRectangleBorder(
...
                ),
                onPressed: () {
                  context.read<LoginBloc>().add(LoginSubmit());
                },
                child: Text(
                  "Sign in",
                  key: const Key("textSignIn"),
                  style: Theme.of(context).textTheme.button?.copyWith(
                    color: Theme.of(context).colorScheme.onPrimary
                  ),
                )
              ),
            ),
...
                elevation: 0,
                tapTargetSize: MaterialTapTargetSize.shrinkWrap
              ),
              onPressed: () {},
              child: Text(
                "Forgot Password?",
                key: const Key("textForgotPassword"),
                style: Theme.of(context).textTheme.bodyText1?.copyWith(
                  color: Theme.of(context).colorScheme.primary
                ),
              )
            )
          ],
...
                            const SizedBox(height: 16),
                            Row(
                              mainAxisAlignment: MainAxisAlignment.center,
                              children: [
                                Text(
                                  "Don't have an account? ",
                                  key: const Key("textDontHaveAnAccount"),
                                  style: Theme.of(context).textTheme.bodyText2?.copyWith(
                                    color: Theme.of(context).colorScheme.onBackground
                                  ),
                                ),
                                TextButton(
                                  key: const Key("signUpTextButton"),
                                  style: TextButton.styleFrom(
                                    padding: EdgeInsets.zero,
                                    minimumSize: Size.zero,
                                    elevation: 0,
                                    tapTargetSize: MaterialTapTargetSize.shrinkWrap
                                  ),
                                  onPressed: () {
                                    Navigator.pushNamed(context, RegistrationView.routeName);
                                  },
                                  child: Text(
                                    "Sign up",
                                    key: const Key("textSignUp"),
                                    style: Theme.of(context).textTheme.bodyText2?.copyWith(
                                      color: Theme.of(context).colorScheme.primary
                                    ),
                                  )
                                )
                              ],
...
