...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: Theme.of(context).colorScheme.background,
      appBar: AppBar(
        title: Text(
          "Settings",
          textAlign: TextAlign.center,
          style: Theme.of(context).textTheme.headline2?.copyWith(
            color: Theme.of(context).colorScheme.onBackground
          ),
        ),
        backgroundColor: Theme.of(context).colorScheme.background,
...
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              const ProfileSettingsSection(),
              const SizedBox(height: 32),
              Text(
                "Others",
                key: const Key("labelOthers"),
                style: Theme.of(context).textTheme.subtitle1?.copyWith(
                  color: Theme.of(context).colorScheme.onBackground,
                ),
              ),
              const SizedBox(height: 24),
              TextButton(
...
                style: TextButton.styleFrom(
                  padding: const EdgeInsets.all(0),
                  minimumSize: Size.zero
                ),
                child: Text(
                  "Change Password",
                  key: const Key("textChangePassword"),
                  style: Theme.of(context).textTheme.subtitle1?.copyWith(
                    color: Theme.of(context).colorScheme.onBackground,
                    fontWeight: FontWeight.w400,
                    height: 1
                  ),
                ),
              ),
              Row(
                children: [
                  Expanded(
                    child: Text(
                      "Dark Mode",
                      key: const Key("textDarkMode"),
                      textAlign: TextAlign.left,
                      style: Theme.of(context).textTheme.subtitle1?.copyWith(
                        color: Theme.of(context).colorScheme.onBackground,
                        fontWeight: FontWeight.w400,
                        height: 1
                      ),
...
                style: TextButton.styleFrom(
                  padding: const EdgeInsets.all(0),
                  minimumSize: Size.zero
                ),
                child: Text(
                  "About",
                  key: const Key("textAbout"),
                  style: Theme.of(context).textTheme.subtitle1?.copyWith(
                    color: Theme.of(context).colorScheme.onBackground,
                    fontWeight: FontWeight.w400,
                    height: 1
                  ),
                ),
...
                style: TextButton.styleFrom(
                  padding: const EdgeInsets.all(0),
                  minimumSize: Size.zero
                ),
                child: Text(
                  "Logout",
                  key: const Key("textLogout"),
                  style: Theme.of(context).textTheme.subtitle1?.copyWith(
                    color: Theme.of(context).colorScheme.onBackground,
                    fontWeight: FontWeight.w400,
                    height: 1
                  ),
                ),
...
